# hs-sdl-mac

./: ChangeLog.md  LICENSE  README.md  Setup.hs  hs-sdl-mac.cabal  icon.icns  stack.yaml
src/: Main.hs
