name:                hs-sdl-mac
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD2
license-file:        LICENSE
author:              nanotech
maintainer:          nanotech@nanotechcorp.net
-- copyright:
-- category:
build-type:          Custom
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hs-sdl-mac
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.9 && < 4.10
                     , linear >= 1.20 && < 1.21
                     , sdl2 >= 2.1 && < 2.3
                     , Cabal >= 1.24 && < 1.25
                     , cabal-macosx >= 0.2 && < 0.3

custom-setup
  setup-depends:       base >= 4.9 && < 4.10
                     , Cabal >= 1.24 && < 1.25
                     , cabal-macosx >= 0.2 && < 0.3
